# mgr-csr-vs-ssr

./: .gitignore  README.md  destroy.sh  orchestrator.py  package-lock.json  run_experiments.sh  run_stress_test.sh  stop_test.sh  verifier.py
ansible/: .ansible-lint  (+15 more)
orchestrator/: README.md  infra.example.yaml  infra.yaml  pyproject.toml  renames.json  requirements.txt
orchestrator/scripts/: migrate_artifact_keys.py
orchestrator/src/mgr_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
orchestrator/src/orchestrator/: config.py  main.py
orchestrator/src/orchestrator/actions/aggregate/: cli.py  engine.py  test_aggregator.py
orchestrator/src/orchestrator/actions/analyze/: cli.py  config.py  config.yaml  engine.py  models.py  test_analyzer.py
orchestrator/src/orchestrator/actions/campaign/: cli.py  provider.py  test_campaign.py
orchestrator/src/orchestrator/actions/destroy/: cli.py  provider.py
orchestrator/src/orchestrator/actions/preview/: cli.py  provider.py
orchestrator/src/orchestrator/actions/run/: cli.py  provider.py
orchestrator/src/orchestrator/scratch/: test_fix.py
orchestrator/src/orchestrator/shared/: ansible.py  runner.py  test_verifier.py  verifier.py
orchestrator/test_scenarios/: capacity_k6.example.yaml  capacity_k6_dev.yaml  capacity_k6_preprod.yaml  capacity_k6_prod.yaml  capacity_k6_prod_app.yaml  capacity_k6_prod_app_assets.yaml  capacity_k6_prod_hello.yaml  capacity_wrk.example.yaml  capacity_wrk_dev.yaml  load.example.yaml  load_dev.yaml  load_preprod.yaml  load_prod.yaml  load_prod_app.yaml  load_prod_app_assets.yaml  load_prod_hello.yaml
(+686 files in other folders)
