[project]
name = "mgr-orchestrator"
version = "0.1.0"
description = "Orchestrator for performance experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer[all]",
    "ansible-runner",
    "pandas",
    "scipy",
    "seaborn",
    "pyyaml",
    "matplotlib",
    "rich",
    "prometheus-api-client",
    "tabulate",
    "pytest",
    "pytest-mock",
    "questionary",
]

[project.scripts]
mgr = "orchestrator.main:app"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = "test_*.py"
